--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "redux": "^4.0.5"
   },
   "scripts": {
-    "predeploy": "npm run build",
+    "predeploy": "export NODE_OPTIONS=--openssl-legacy-provider && npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
